RELEASE 4.1:

2013-10-02  Earnie Boyd  <earnie@users.sourceforge.net>

	[#2081] Neeed a __FORCEINLINE macro for better definition.

	* include/_mingw.h (__FORCEINLINE): New macro.

	[#2080] Restructure the GCC to MS architecture defines.

	* include/_mingw.h: Implement GCC to MS architecture mapping based on
	documentation listed in the [#2080] ticket.

	[#2078] shlobj.h is missing defines.

	* include/shlobj.h: Refactor existing defines to move to the proper
	OS version filter before defining.
	(BIF_UAHINT): New definition.
	(BIF_NONEWFOLDERBUTTON): Ditto.
	(BIF_NOTRANSLATETARGETS): Ditto.
	(BIF_BROWSEFILEJUNCTIONS): Ditto.

	[#2079] The kspin_lock_queue_number structure changed for _AMD64_.

	* include/ddk/winddk.h (NTOSAPI): Refactor to use __MINGW_EXPORT and
	__MINGW_IMPORT instead of DECL_EXPORT and DECL_IMPORT.
	(KSPIN_LOCK_QUEUE_NUMBER): Add differences for _AMD64_ architecture.

2013-10-01  Earnie Boyd  <earnie@users.sourceforge.net>

	[#2077] mce.h is missing.

	* ddk/mce.h: New file.

2013-09-28  Earnie Boyd  <earnie@users.sourceforge.net>

	Miscellaneous cleanup for compile errors.

	* Makefile.in: Correct capitalization of $(srcdir) to $(SRCDIR).
	* config.h.in: Autoheader added a generated from comment.
	* include/_mingw.h (__CRT_STATIC_INLINE): New macro.
	* include/stralign.h: Use __CRT_STATIC_INLINE in define for
	___API_STATIC__.
	(ua_wcscpy()): Add declaration.
	* src/libcrt/wchar/swprintf.c: Remove code making swprintf non-ansi.
	* src/libcrt/wchar/vswprintf.c: Ditto.

	Timeval struct bitness issue [#2059]

	* include/sys/time.h: Use time_t instead of long for timeval.tv_sec.
	* include/winsock.h: Ditto.
	* include/winsock2.h: Ditto.

	MOD_NOREPEAT missing [#2017]

	* include/winuser.h: Add MOD_NOREPEAT define for Windows 7.
	Adjust some whitespace and add a few comments.

2013-09-27  Earnie Boyd  <earnie@users.sourceforge.net>

	Manage issue [#2018] and miscellaneous changes.

	* include/stdio.h: Need to include io.h for _lseeki64().